--- a/sub01.html
+++ b/sub01.html
@@ -102,7 +102,7 @@
   <div class="popup" id="popup">
     <div class="dimmed"></div>
     <div id="container" style="z-index: 20;">
-      <div class="popup_cont">
+      <div class="popup_cont" style="margin-top: -550px;">
         <h2>국가보훈처의 뉴스레터를 구독해보세요.</h2>
       <form action="">
         <div class="row">
